--- a/HTML/Table.html
+++ b/HTML/Table.html
@@ -6,6 +6,89 @@
     <title>Table</title>
 </head>
 <body>
+   <h1>Weekly Class Schedule</h1>
     
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>9:00 - 10:00</td>
+                <td>Mathematics</td>
+                <td>English</td>
+                <td>Science</td>
+                <td>Mathematics</td>
+                <td>History</td>
+            </tr>
+            <tr>
+                <td>10:00 - 11:00</td>
+                <td>Science</td>
+                <td>Mathematics</td>
+                <td>English</td>
+                <td>Science Lab</td>
+                <td>Geography</td>
+            </tr>
+            <tr>
+                <td>11:00 - 12:00</td>
+                <td colspan="5">BREAK</td>
+            </tr>
+            <tr>
+                <td>12:00 - 1:00</td>
+                <td>History</td>
+                <td>Art</td>
+                <td>Physical Education</td>
+                <td>Music</td>
+                <td>Computer Science</td>
+            </tr>
+            <tr>
+                <td>1:00 - 2:00</td>
+                <td>Geography</td>
+                <td>Computer Science</td>
+                <td>Mathematics</td>
+                <td>English</td>
+                <td>Science</td>
+            </tr>
+        </tbody>
+    </table>
+    
+    <h2>Quick Reference</h2>
+    <table  border="2">
+        <tr>
+            <th>Element</th>
+            <th>Purpose</th>
+        </tr>
+        <tr>
+            <td>&lt;table&gt;</td>
+            <td>Defines the table</td>
+        </tr>
+        <tr>
+            <td>&lt;tr&gt;</td>
+            <td>Defines a table row</td>
+        </tr>
+        <tr>
+            <td>&lt;td&gt;</td>
+            <td>Defines a table cell</td>
+        </tr>
+        <tr>
+            <td>&lt;th&gt;</td>
+            <td>Defines a header cell</td>
+        </tr>
+        <tr>
+            <td>colspan</td>
+            <td>Makes cell span multiple columns</td>
+        </tr>
+        <tr>
+            <td>rowspan</td>
+            <td>Makes cell span multiple rows</td>
+        </tr>
+    </table>
 </body>
 </html>
